# wifite2

./: .gitignore  Dockerfile  POETRY.md  README.md  ieee-oui.txt  pyproject.toml  requirements.txt  runtests.sh  setup.cfg  setup.py  wifite.py  wordlist-probable.txt
.github/workflows/: checkpr-sourcery.yml  codeql-analysis.yml  codeql.yml  dependency-review.yml  ossar-analysis.yml  python-publish.yml  snyk-analysis.yml  snyk-container-analysis.yml  snyk-infrastructure-analysis.yml  trivy-analysis.yml
docs/: DUAL_INTERFACE_EXAMPLES.md  DUAL_INTERFACE_GUIDE.md  EVILTWIN_GUIDE.md  EVILTWIN_TROUBLESHOOTING.md  TUI_README.md  TUI_TESTING_REPORT.md  WPA3_DETECTION_OPTIMIZATION.md  WPA3_TROUBLESHOOTING.md
tests/: demo_statistics.py  test_Handshake.py  test_adaptive_deauth_integration.py  test_attack_view_start.py  test_channel_synchronization.py  test_cleanup.py  test_client_monitor.py  test_config_restoration.py  test_dual_hcxdump_capture.py  test_dual_interface_error_handling.py  test_dual_interface_eviltwin.py  test_dual_interface_wpa.py  test_eviltwin_attack_view.py  test_eviltwin_e2e.py  test_eviltwin_integration.py  test_eviltwin_session.py  test_eviltwin_unit.py  test_exact_output.py  test_hcxdump_integration.py  test_hcxdumptool.py  test_interface_assignment_strategy.py  test_interface_detection_unit.py  test_interface_info.py  test_keyboard_input.py  test_large_target_optimization.py  test_performance_optimizations.py  test_resume_display.py  test_resume_tui_display.py  test_sae_handshake.py  test_selector_manufacturer_display.py  test_session_attack_integration.py  test_session_deletion.py  test_session_updates.py  test_session_validation.py  test_target_filtering.py  test_terminal_compatibility.py  test_tui_integration.py  test_ui_components.py  test_wpa2_compatibility.py  test_wpa3_detection_optimization.py  (+5 more)
tools/: clean.sh  fetch-oui  fetch_oui.py  run-automation.sh
wifite/: __main__.py  args.py  config.py  wifite.py
(+88 files in other folders)
