[tool.poetry]
name = "wifite2"
version = "0.1.0"
description = ""
authors = ["kimocoder <christian@aircrack-ng.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
setuptools = "^73.0.1"
chardet = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
