[project]
name = "wifite2"
version = "2.9.9-beta"
description = "Wireless Network Auditor for Linux & Android"
authors = [
    {name = "kimocoder", email = "christian@aircrack-ng.org"}
]
readme = "README.md"
license = "GPL-2.0-only"
requires-python = ">=3.9"
keywords = ["wireless", "security", "auditing", "penetration-testing", "wifi"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: POSIX :: Linux",
    "Topic :: Security",
]
dependencies = [
    "chardet>=5.2.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "scapy>=2.6.1; python_version < '4'",
    "setuptools>=78.1.1",
]

[project.urls]
Homepage = "https://github.com/kimocoder/wifite2"
Repository = "https://github.com/kimocoder/wifite2"
Issues = "https://github.com/kimocoder/wifite2/issues"

[project.scripts]
wifite = "wifite.wifite:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.poetry]
packages = [
    { include = "wifite" }
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
